<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/onboarding_form_margin"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/onboarding_form_title"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cfp_email_sec"
        style="@style/OnboardingFormField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cfp_email"
            style="@style/OnboardingFormInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/cfp_check_mail_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/activity_margin_double"
        android:gravity="center"
        android:text="@string/forgot_password_check_mail_alert"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/forgot_password_alert"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cfp_next"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/next" />
</RelativeLayout>