<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.OnboardingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_onboarding_bg">

        <ImageView
            android:id="@+id/ao_logo_image"
            android:layout_width="@dimen/onboarding_logo"
            android:layout_height="@dimen/onboarding_logo"
            android:elevation="@dimen/default_elevation"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/ao_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ao_logo_image"
            android:layout_marginLeft="@dimen/onboarding_margin"
            android:layout_marginTop="@dimen/onboarding_title_spacing_vertical"
            android:text="@string/welcome_to"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/onboarding_intro_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ao_welcome_text"
            android:layout_marginLeft="@dimen/onboarding_margin"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/onboarding_intro_big"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/ao_login_sec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/onboarding_login_sec_text" />

            <TextView
                android:id="@+id/ao_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/onboarding_title_spacing_horizontal"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/onboarding_login_sec_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/ao_sign_up"
            style="@style/AccentButtonRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ao_login_sec"
            android:layout_margin="@dimen/onboarding_margin"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ao_sign_up"
            android:layout_marginLeft="@dimen/onboarding_margin"
            android:layout_marginRight="@dimen/onboarding_margin"
            android:gravity="left"
            android:text="@string/beautifully_organizing_the_world_s_stories"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/onboarding_caption"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
