<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/sign_up_peek_height"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/fsu_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/onboarding_form_margin"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/onboarding_form_title"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_first_name"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_last_name"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_email"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_password"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_phone_number"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_organization"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/organization"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_designation"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

<!--
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fsu_user_group_drop_down"
            style="@style/OnboardingFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fsu_user_group"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:hint="@string/user_group" />
        </android.support.design.widget.TextInputLayout>
-->

        <TextView
            android:id="@+id/fsu_sign_up"
            style="@style/AccentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onboarding_form_margin"
            android:text="@string/sign_up" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
