<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/sign_up_peek_height"
    >


    <LinearLayout
        android:id="@+id/fsu_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include layout="@layout/activity_header_layout"/>


        <TextView
            android:id="@+id/header_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/onboarding_form_margin"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/grayDark"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cfp_email_sec"
            style="@style/OnboardingFormField"
            android:layout_below="@+id/header_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cfp_email"
                style="@style/OnboardingFormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:imeOptions="actionDone"
               />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/cfp_next"
            style="@style/AccentButton"
            android:layout_below="@+id/cfp_email_sec"
            android:layout_width="match_parent"
            android:background="@drawable/ic_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
