<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:id="@+id/fsi_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/onboarding_form_margin"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/onboarding_form_title"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                style="@style/OnboardingFormField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fsi_email"
                    style="@style/OnboardingFormInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/OnboardingFormField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fsi_password"
                    style="@style/OnboardingFormInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/fsi_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/onboarding_form_margin"
                android:text="@string/forgot_password_button"
                android:textColor="@color/signInForgotPassword"
                android:textSize="@dimen/sign_in_forgot_password" />

            <TextView
                android:id="@+id/fsi_sign_in"
                style="@style/AccentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />
        </LinearLayout>

        <include
            android:id="@+id/fsi_forgot_password_view"
            layout="@layout/content_forgot_password" />
    </RelativeLayout>
</ScrollView>
